# picocolorsensor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
picocolorsensor/: __init__.py
src/: main.cpp
tests/: test_color_sensor.py
